deployment/03_frontend/01_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-frontend
  labels:
    app: counter-frontend
    app.kubernetes.io/part-of: counter-app
  namespace: 254501-samready
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-frontend
  template:
    metadata:
      name: counter-frontend
      labels:
        app: counter-frontend
    spec:
      containers:
        - name: counter-frontend
          image: ghcr.io/benschwarz1982/counter-frontend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
