deployment/03_frontend/03_route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: counter-frontend
  labels:
    app: counter-frontend
    app.kubernetes.io/part-of: counter-app
  namespace: 254501-samready
spec:
  to:
    kind: Service
    name: counter-frontend
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
